--- a/v02b-css.html
+++ b/v02b-css.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
-                <li><a href="andereseite.html">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a id="activetab" href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
