--- a/v03b.html
+++ b/v03b.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
-                <li><a href="v01">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -41,10 +41,10 @@
                 <p class="beschreibung">
                     <img id="chapter-logo"
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png"
-                        alt="CSS3 Logo" width="20%" /> 
+                        alt="CSS3 Logo" width="20%" />
                         PHP ist eine Skriptsprache, die verwendet wird, um Websites und Webanwendungen
                         dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit der man
-                        mittels PHP Datenbankabfragen machen kann. 
+                        mittels PHP Datenbankabfragen machen kann.
                     <br>
                 </p>
                 <a id="skriptlink"
