--- a/v03c.html
+++ b/v03c.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
-                <li><a href="v01">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -41,8 +41,8 @@
                 <p class="beschreibung">
                     <img id="chapter-logo"
                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png"
-                        alt="CSS3 Logo" width="20%" /> 
-                        NodeJS ist eine serverseitige Plattform zum Betrieb von Netzwerkanwendungen. 
+                        alt="CSS3 Logo" width="20%" />
+                        NodeJS ist eine serverseitige Plattform zum Betrieb von Netzwerkanwendungen.
                         Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.
                     <br>
                 </p>
