--- a/v02a-html.html
+++ b/v02a-html.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
-                <li><a href="">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a id="activetab" href="#">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -431,7 +431,7 @@
                                             <figcaption>Abbildung 2.2 – Eine beispielshafte Textstrukturierung
                                             </figcaption>
                                         </figure>
-                                    
+
                                 </div>
                             </div>
 
@@ -1680,7 +1680,7 @@
             </div>
 
         </div>
-   
+
     <script src="scripts.js"></script>
 </body>
 
