--- a/v03a.html
+++ b/v03a.html
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a href="mainpage.html">Start</a></li>
-                <li><a href="v01">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -41,9 +41,9 @@
                 <p class="beschreibung">
                     <img id="chapter-logo"
                         src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png"
-                        alt="CSS3 Logo" width="15%" /> 
-                        JSPs und Servlets basieren auf Java und haben zum Ziel, Websites 
-                        dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, 
+                        alt="CSS3 Logo" width="15%" />
+                        JSPs und Servlets basieren auf Java und haben zum Ziel, Websites
+                        dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien,
                         die Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen,
                         die HTML-Code ausgeben. <br>
                         JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen und anders herum.
