--- a/mainpage.html
+++ b/mainpage.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="navigation">
                 <li><a id="activetab" href="mainpage.html">Start</a></li>
-                <li><a href="v01-client-server.html">Server & Client</a></li>
+                <li><a href="andereseite.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -72,20 +72,28 @@
                 <hr>
                 <div class="center-paragraph">
                     <h3 id="abs5" class="thema-h3">JSP's/Servlets/JaxB</h3>
-                    <p>
-                        <a href=""></a>...</p>
+                    <div class="thema">
+                        <p>
+                            <a href="v03a.html"><img id="jsp-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png" alt="JSP-Logo" width="15%" /> </a>JSPs und Servlets basieren auf Java und haben zum Ziel,
+                            Websites dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, die Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br> JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen
+                            und anders herum.</p>
+                    </div>
                 </div>
                 <hr>
                 <div class="center-paragraph">
                     <h3 id="abs6" class="thema-h3">PHP</h3>
-                    <p>
-                        <a href=""></a>..</p>
+                    <div class="thema">
+                        <p>
+                            <a href="v03b.html"><img id="php-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png" alt="PHP Logo" width="15%" /></a> PHP ist eine Skriptsprache, die verwendet wird, um
+                            Websites und Webanwendungen dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit der man mittels PHP Datenbankabfragen machen kann. </p>
+                    </div>
                 </div>
                 <hr>
                 <div class="center-paragraph">
                     <h3 id="abs7" class="thema-h3">NodeJS</h3>
                     <p>
-                        <a href=""></a>...</p>
+                        <a href="v03c.html"><img id="node-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png" alt="NodeJS Logo" width="15%" /></a> NodeJS ist eine serverseitige Plattform zum
+                        Betrieb von Netzwerkanwendungen. Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.</p>
                 </div>
             </div>
             <div class="content-right">
