--- a/mainpage.html
+++ b/mainpage.html
@@ -91,9 +91,11 @@
                 <hr>
                 <div class="center-paragraph">
                     <h3 id="abs7" class="thema-h3">NodeJS</h3>
-                    <p>
-                        <a href="v03c.html"><img id="node-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png" alt="NodeJS Logo" width="15%" /></a> NodeJS ist eine serverseitige Plattform zum
-                        Betrieb von Netzwerkanwendungen. Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.</p>
+                    <div class="thema">
+                        <p>
+                            <a href="v03c.html"><img id="node-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png" alt="NodeJS Logo" width="15%" /></a> NodeJS ist eine serverseitige Plattform
+                            zum Betrieb von Netzwerkanwendungen. Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.</p>
+                    </div>
                 </div>
             </div>
             <div class="content-right">
