--- a/mainpage.html
+++ b/mainpage.html
@@ -47,8 +47,11 @@
                     <h3 id="abs2" class="thema-h3">HTML</h3>
                     <div class="thema">
                         <p>
-                            <a href="v02a-html.html"><img id="html-logo" class="start-logo" src="v02a-data/logo.png" alt="HTML Logo" width="15%" /></a>HTML ist eine Auszeichnungssprache, die zur Erstellung von Inhalten im World Wide Web genutzt wird. Ein HTML-Dokument bildet
-                            die Grundlage einer Website, und legt die Struktur der Inhalte auf der Website fest. In diesem Skript werden ihnen die Grundlagen dieser Sprache erläutert. </p>
+                            <a href="v02a-html.html"><img id="html-logo" class="start-logo" src="v02a-data/logo.png"
+                                    alt="HTML Logo" width="15%" /></a>HTML ist eine Auszeichnungssprache, die zur
+                            Erstellung von Inhalten im World Wide Web genutzt wird. Ein HTML-Dokument bildet
+                            die Grundlage einer Website, und legt die Struktur der Inhalte auf der Website fest. In
+                            diesem Skript werden ihnen die Grundlagen dieser Sprache erläutert. </p>
                     </div>
                 </div>
                 <hr>
@@ -56,8 +59,11 @@
                     <h3 id="abs3" class="thema-h3">CSS</h3>
                     <div class="thema">
                         <p>
-                            <a href="v02b-css.html"><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png" alt="CSS3 Logo" width="15%" /></a>CSS3 wird benutzt um HTML-Dokumente zu stylen. Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen.
-                            Die Abkürzung CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von CSS, die Kaskadierung schon im Namen.</p>
+                            <a href="v02b-css.html"><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png"
+                                    alt="CSS3 Logo" width="15%" /></a>CSS3 wird benutzt um HTML-Dokumente zu stylen.
+                            Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen.
+                            Die Abkürzung CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von
+                            CSS, die Kaskadierung schon im Namen.</p>
                     </div>
                 </div>
                 <hr>
@@ -65,7 +71,10 @@
                     <h3 id="abs4" class="thema-h3">JavaScript</h3>
                     <div class="thema">
                         <p>
-                            <a href="v02c-javascript.html"><img id="js-logo" class="start-logo" src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /></a> JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei andere Sprachen wie HTML
+                            <a href="v02c-javascript.html"><img id="js-logo" class="start-logo"
+                                    src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /></a>
+                            JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei
+                            andere Sprachen wie HTML
                             und CSS. Dieses Skript soll ein Grundverständnis für die Sprache schaffen.</p>
                     </div>
                 </div>
@@ -74,8 +83,13 @@
                     <h3 id="abs5" class="thema-h3">JSP's/Servlets/JaxB</h3>
                     <div class="thema">
                         <p>
-                            <a href="v03a.html"><img id="jsp-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png" alt="JSP-Logo" width="15%" /> </a>JSPs und Servlets basieren auf Java und haben zum Ziel,
-                            Websites dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, die Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br> JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen
+                            <a href="v03a.html"><img id="jsp-logo" class="start-logo"
+                                    src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png"
+                                    alt="JSP-Logo" width="7%" style="margin-right: 4%; margin-left: 5%;"/> </a>JSPs und Servlets basieren auf Java und haben zum
+                            Ziel,
+                            Websites dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, die
+                            Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br>
+                            JaxB wird benutzt, um Java-Objekte nach XML zu übersetzen
                             und anders herum.</p>
                     </div>
                 </div>
@@ -84,8 +98,11 @@
                     <h3 id="abs6" class="thema-h3">PHP</h3>
                     <div class="thema">
                         <p>
-                            <a href="v03b.html"><img id="php-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png" alt="PHP Logo" width="15%" /></a> PHP ist eine Skriptsprache, die verwendet wird, um
-                            Websites und Webanwendungen dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit der man mittels PHP Datenbankabfragen machen kann. </p>
+                            <a href="v03b.html"><img id="php-logo" class="start-logo"
+                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/PHP-logo.svg/711px-PHP-logo.svg.png"
+                                    alt="PHP Logo" width="15%" /></a> PHP ist eine Skriptsprache, die verwendet wird, um
+                            Websites und Webanwendungen dynamisch zu erstellen. Erwähnenswert ist die Leichtigkeit, mit
+                            der man mittels PHP Datenbankabfragen machen kann. </p>
                     </div>
                 </div>
                 <hr>
@@ -93,8 +110,11 @@
                     <h3 id="abs7" class="thema-h3">NodeJS</h3>
                     <div class="thema">
                         <p>
-                            <a href="v03c.html"><img id="node-logo" class="start-logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png" alt="NodeJS Logo" width="15%" /></a> NodeJS ist eine serverseitige Plattform
-                            zum Betrieb von Netzwerkanwendungen. Es eignet sich besonders gut, um Webserver umzusetzen. Mehr dazu im Skript.</p>
+                            <a href="v03c.html"><img id="node-logo" class="start-logo"
+                                    src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/590px-Node.js_logo.svg.png"
+                                    alt="NodeJS Logo" width="15%" /></a> NodeJS ist eine serverseitige Plattform
+                            zum Betrieb von Netzwerkanwendungen. Es eignet sich besonders gut, um Webserver umzusetzen.
+                            Mehr dazu im Skript.</p>
                     </div>
                 </div>
             </div>
