--- a/mainpage.html
+++ b/mainpage.html
@@ -5,6 +5,7 @@
     <title>Main Page</title>
     <meta charset="UTF-8">
     <link href="stylesheet.css" rel="stylesheet" />
+    <link href="mainpage-style.css" rel="stylesheet"/>
     <link rel="icon" type="image/png" href="hsmalogo.png" />
 </head>
 
@@ -48,7 +49,7 @@
                     <div class="thema">
                         <p>
                             <a href="v02a-html.html"><img id="html-logo" class="start-logo" src="v02a-data/logo.png"
-                                    alt="HTML Logo" width="15%" /></a>HTML ist eine Auszeichnungssprache, die zur
+                                    alt="HTML Logo" width="11%" /></a>HTML ist eine Auszeichnungssprache, die zur
                             Erstellung von Inhalten im World Wide Web genutzt wird. Ein HTML-Dokument bildet
                             die Grundlage einer Website, und legt die Struktur der Inhalte auf der Website fest. In
                             diesem Skript werden ihnen die Grundlagen dieser Sprache erläutert. </p>
@@ -60,7 +61,7 @@
                     <div class="thema">
                         <p>
                             <a href="v02b-css.html"><img id="css-logo" class="start-logo" src="v02b-data/css3-logo.png"
-                                    alt="CSS3 Logo" width="15%" /></a>CSS3 wird benutzt um HTML-Dokumente zu stylen.
+                                    alt="CSS3 Logo" width="9%" /></a>CSS3 wird benutzt um HTML-Dokumente zu stylen.
                             Dieses Skript soll Ihnen die Grundlagen der Benutzung von CSS3 beibringen.
                             Die Abkürzung CSS steht für Cascading Style Sheets, damit steckt der wichtigste Teil von
                             CSS, die Kaskadierung schon im Namen.</p>
@@ -72,7 +73,7 @@
                     <div class="thema">
                         <p>
                             <a href="v02c-javascript.html"><img id="js-logo" class="start-logo"
-                                    src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="15%" /></a>
+                                    src="v02c-data/javascript-logo.png" alt="JavaScript Logo" width="10%" /></a>
                             JavaScript ist für die Entwicklung dynamischer Webseiten unerlässlich. Es ergänzt dabei
                             andere Sprachen wie HTML
                             und CSS. Dieses Skript soll ein Grundverständnis für die Sprache schaffen.</p>
@@ -85,7 +86,7 @@
                         <p>
                             <a href="v03a.html"><img id="jsp-logo" class="start-logo"
                                     src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png"
-                                    alt="JSP-Logo" width="7%" style="margin-right: 4%; margin-left: 5%;"/> </a>JSPs und Servlets basieren auf Java und haben zum
+                                    alt="JSP-Logo" width="7%"/> </a>JSPs und Servlets basieren auf Java und haben zum
                             Ziel,
                             Websites dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, die
                             Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br>
