--- a/mainpage.html
+++ b/mainpage.html
@@ -5,7 +5,7 @@
     <title>Main Page</title>
     <meta charset="UTF-8">
     <link href="stylesheet.css" rel="stylesheet" />
-    <link href="mainpage-style.css" rel="stylesheet"/>
+    <link href="mainpage-style.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="hsmalogo.png" />
 </head>
 
@@ -22,7 +22,7 @@
         <nav>
             <ul class="navigation">
                 <li><a id="activetab" href="mainpage.html">Start</a></li>
-                <li><a href="andereseite.html">Server & Client</a></li>
+                <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
                 <li><a href="v02c-javascript.html">JavaScript</a></li>
@@ -86,7 +86,7 @@
                         <p>
                             <a href="v03a.html"><img id="jsp-logo" class="start-logo"
                                     src="https://upload.wikimedia.org/wikipedia/de/thumb/e/e1/Java-Logo.svg/2000px-Java-Logo.svg.png"
-                                    alt="JSP-Logo" width="7%"/> </a>JSPs und Servlets basieren auf Java und haben zum
+                                    alt="JSP-Logo" width="7%" /> </a>JSPs und Servlets basieren auf Java und haben zum
                             Ziel,
                             Websites dynamisch zu erstellen. JSPs, bzw Java Server Pages, sind HTML Dateien, die
                             Java-Code enthalten. Servlets im Gegenzug sind Java-Klassen, die HTML-Code ausgeben. <br>
