client server beschreibung

--- a/mainpage.html
+++ b/mainpage.html
@@ -40,8 +40,12 @@
                 <br>
                 <div class="center-paragraph">
                     <h3 id="abs1" class="thema-h3">Server & Client</h3>
-                    <p>
-                        <a href=""></a>...</p>
+                    <div class="thema">
+                        <p>
+                            <a href="v01-client-server.html"><img id="http-logo" class="start-logo" src="v01-data/logo.png"
+                                    alt="HTTP Logo" width="15%" /></a>HTTP oder HTTPS sind die meistegenutzten Protokolle für Kommunikation zwischen Client und Server.
+					Ohne sie und Sprachen wie HTML, CSS, JavaScript wäre das Internet wie wir es heute kennen unvorstellbar. </p>
+                    </div>
                 </div>
                 <hr>
                 <div class="center-paragraph">
