--- a/v01-client-server.html
+++ b/v01-client-server.html
@@ -52,9 +52,12 @@
 				<hr>
 				<br>
 				<p class="beschreibung">
-					Beschreibung
+					<img id="chapter-logo" src="v01-data/logo.png" alt="HTTP Logo" width="30%"  />
+					HTTP oder HTTPS sind die meistegenutzten Protokolle für Kommunikation zwischen Client und Server.
+					Ohne sie und Sprachen wie HTML, CSS, JavaScript wäre das Internet wie wir es heute kennen unvorstellbar.
 					<br>
 				</p>
+
 				<a id="skriptlink" href="v01-data/Client-Server-Kommunikation im Detail.pdf" target="_blank">→
 					Client-Server-Kommunikation im Detail ←</a>
 				<p class="author">
