--- a/v03c.html
+++ b/v03c.html
@@ -25,7 +25,8 @@
                 <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
-                <li><a href="v02c-javascript.html">JavaScript</a></li>
+                <li><a href="v02c-javascript.html">JavaScript 1</a></li>
+                <li><a href="v02c-javascript-mb.html">JavaScript 2</a></li>
                 <li><a href="v03a.html">JSP's/Servlets/JaxB</a></li>
                 <li><a href="v03b.html">PHP</a></li>
                 <li><a id="activetab" href="v03c.html">NodeJS</a></li>
