--- a/v02c-javascript-mb.html
+++ b/v02c-javascript-mb.html
@@ -25,6 +25,7 @@
                 <li><a href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
+                <li><a href="v02b-css-gh.html">CSS 2</a></li>
                 <li><a href="v02c-javascript.html">JavaScript 1</a></li>
                 <li><a id="activetab" href="v02c-javascript-mb.html">JavaScript 2</a></li>
                 <li><a href="v03a.html">JSP's/Servlets/JaxB </a></li>
@@ -727,7 +728,7 @@
                                     </p>
                                     <figure id="syntax6-1">
                                         <p class="syntax">
-                                            <i>$</i> (document).ready(<i>function</i>() { Anweisungen }); <br> <i>$</i>(<i>function</i>() { Anweisungen });
+                                            <i>$</i>(document).ready(<i>function</i>() { Anweisungen }); <br> <i>$</i>(<i>function</i>() { Anweisungen });
                                         </p>
                                         <figcaption>Syntax Beispiel 6.1: Ausführen von Anweisungen nach dem Laden des DOM-Baumes</figcaption>
                                     </figure>
