--- a/v01-client-server.html
+++ b/v01-client-server.html
@@ -25,6 +25,7 @@
                 <li><a id="activetab" href="v01-client-server.html">Server & Client</a></li>
                 <li><a href="v02a-html.html">HTML</a></li>
                 <li><a href="v02b-css.html">CSS</a></li>
+                <li><a href="v02b-css-gh.html">CSS 2</a></li>
                 <li><a href="v02c-javascript.html">JavaScript 1</a></li>
                 <li><a href="v02c-javascript-mb.html">JavaScript 2</a></li>
                 <li><a href="v03a.html">JSP's/Servlets/JaxB</a></li>
